js262/test/built-ins/NativeErrors/SyntaxError/constructor.js


/*---
es6id: 19.5.6.1
description: >
  SyntaxError is a constructor function.
---*/

assert.sameValue(typeof SyntaxError, 'function', 'typeof SyntaxError is "function"');
